RESOLVED FIXED11661
SVG: stroke not sensitive to mouse events (hit testing fails)
https://bugs.webkit.org/show_bug.cgi?id=11661
Summary SVG: stroke not sensitive to mouse events (hit testing fails)
Andreas Neumann
Reported 2006-11-21 03:30:46 PST
In this example I don't get alerts when clicking on the red line or the black stroke of the rectangle. On rare occasions I get alerts on the black stroke of the rectangle, but not reliable/reproducable. This might be related to bug http://bugs.webkit.org/show_bug.cgi?id=11096
Attachments
First attempt (1.86 KB, patch)
2006-11-22 12:29 PST, Rob Buis
eric: review-
Now with testcase (19.01 KB, patch)
2006-11-22 12:46 PST, Rob Buis
eric: review+
Rob Buis
Comment 1 2006-11-21 12:23:51 PST
Hi Andreas, So nice to see you entering svg bugs! (In reply to comment #0) > In this example I don't get alerts when clicking on the red line or the black > stroke of the rectangle. On rare occasions I get alerts on the black stroke of > the rectangle, but not reliable/reproducable. > > This might be related to bug http://bugs.webkit.org/show_bug.cgi?id=11096 That one really seems different, its about unclosed polylines IIRC. I investigated this one, the transforms/translations seem to mess it up. My bet is that it is due to the viewBox calculations. I'll work on it! Cheers, Rob.
Rob Buis
Comment 2 2006-11-22 12:29:02 PST
Created attachment 11614 [details] First attempt This makes the testcase work and also works with the existing tests. Cheers, Rob.
Eric Seidel (no email)
Comment 3 2006-11-22 12:31:23 PST
Comment on attachment 11614 [details] First attempt This needs a test case. (or needs to have fixed an existing one). Otherwise it looks fine.
Rob Buis
Comment 4 2006-11-22 12:46:51 PST
Created attachment 11615 [details] Now with testcase MacDome correctly pointed out the patch lacked a testcase, so there :) Cheers, Rob.
Eric Seidel (no email)
Comment 5 2006-11-22 13:24:43 PST
Comment on attachment 11615 [details] Now with testcase Well, it's not the worlds simplest test case. But assuming it failed before and now succeeds, your patch looks good!
David Kilzer (:ddkilzer)
Comment 6 2006-11-23 14:51:51 PST
rwlbuis committed r17876.
Note You need to log in before you can comment on or make changes to this bug.