        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=11661
        SVG: stroke not sensitive to mouse events (hit testing fails)

        Use mapAbsolutePointToLocal when hit-testing strokes.



Canonical link: https://commits.webkit.org/15031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17876 268f45cc-cd09-0410-ab3c-d52691b4dbfc